RESOLVED FIXED139109
[EFL] ewk_view_scale_set() doesn't work correctly
https://bugs.webkit.org/show_bug.cgi?id=139109
Summary [EFL] ewk_view_scale_set() doesn't work correctly
Gyuyoung Kim
Reported 2014-11-30 06:53:26 PST
When fixed layout is enabled on EFL port, it doesn't work correctly. - WebPageProxy's m_pageScaleFactor is not synchronized with PageViewportController's one. - PageViewportController::syncVisibleContents() is failed to finish work though, its caller updates m_pageScaleFactor. - And so on.
Attachments
WIP (6.00 KB, patch)
2014-11-30 07:03 PST, Gyuyoung Kim
no flags
Patch (11.83 KB, patch)
2014-12-01 02:22 PST, Gyuyoung Kim
no flags
Patch (11.86 KB, patch)
2014-12-01 17:14 PST, Gyuyoung Kim
no flags
Patch (11.78 KB, patch)
2014-12-01 17:47 PST, Gyuyoung Kim
no flags
Gyuyoung Kim
Comment 1 2014-11-30 07:03:48 PST
Gyuyoung Kim
Comment 2 2014-12-01 02:22:32 PST
Gyuyoung Kim
Comment 3 2014-12-01 02:36:30 PST
CC'ing Ossy.
Gyuyoung Kim
Comment 4 2014-12-01 17:07:10 PST
(In reply to comment #3) > CC'ing Ossy. Ossy, could you take a look ? This patch can fix scale and zooming on EFL MiniBrowser.
Gyuyoung Kim
Comment 5 2014-12-01 17:14:23 PST
Gyuyoung Kim
Comment 6 2014-12-01 17:47:59 PST
Csaba Osztrogonác
Comment 7 2014-12-02 01:57:12 PST
Comment on attachment 242372 [details] Patch rs=me
WebKit Commit Bot
Comment 8 2014-12-02 03:22:58 PST
Comment on attachment 242372 [details] Patch Clearing flags on attachment: 242372 Committed r176631: <http://trac.webkit.org/changeset/176631>
WebKit Commit Bot
Comment 9 2014-12-02 03:23:03 PST
All reviewed patches have been landed. Closing bug.
Note You need to log in before you can comment on or make changes to this bug.