Source/WebKit2/UIProcess/API/efl/EwkView.h
@@ -193,6 +193,8 @@ public:
     // FIXME: needs refactoring (split callback invoke)
     void informURLChange();
 
+    void updateScaleToPageViewportController(double scaleFactor, int x, int y);
+
     PassRefPtr<cairo_surface_t> takeSnapshot();
     bool scrollBy(const WebCore::IntSize&);
 
